versions/0.8.0/_sources/refs/_aws-cdk_aws-waf.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"UYTp4QLtHvaXl/qXwQ8obefjN68T/UgmuANFH2Nrn1I="}

@aws-cdk/aws-waf
================

.. mdinclude:: ./__aws-cdk_aws-waf.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-waf


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-waf.cloudformation

ByteMatchSetResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ByteMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ByteMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ByteMatchTupleProperty



      .. py:attribute:: fieldToMatch

         ``ByteMatchSetResource.ByteMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: positionalConstraint

         ``ByteMatchSetResource.ByteMatchTupleProperty.PositionalConstraint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-positionalconstraint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: targetString

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetString``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-targetstring


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: targetStringBase64

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetStringBase64``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-targetstringbase64


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: textTransformation

         ``ByteMatchSetResource.ByteMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: FieldToMatchProperty



      .. py:attribute:: data

         ``ByteMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ByteMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ByteMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResourceProps



   .. py:attribute:: byteMatchSetName

      ``AWS::WAF::ByteMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-bytematchset.html#cfn-waf-bytematchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: byteMatchTuples

      ``AWS::WAF::ByteMatchSet.ByteMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-bytematchset.html#cfn-waf-bytematchset-bytematchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResource.ByteMatchTupleProperty` or undefined


IPSetResource
~~~~~~~~~~~~~

.. py:class:: IPSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IPSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IPSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.IPSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: IPSetDescriptorProperty



      .. py:attribute:: type

         ``IPSetResource.IPSetDescriptorProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-ipset-ipsetdescriptors.html#cfn-waf-ipset-ipsetdescriptors-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``IPSetResource.IPSetDescriptorProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-ipset-ipsetdescriptors.html#cfn-waf-ipset-ipsetdescriptors-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



IPSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IPSetResourceProps



   .. py:attribute:: ipSetName

      ``AWS::WAF::IPSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-ipset.html#cfn-waf-ipset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipSetDescriptors

      ``AWS::WAF::IPSet.IPSetDescriptors``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-ipset.html#cfn-waf-ipset-ipsetdescriptors


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.IPSetResource.IPSetDescriptorProperty` or undefined


RuleResource
~~~~~~~~~~~~

.. py:class:: RuleResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.RuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: PredicateProperty



      .. py:attribute:: dataId

         ``RuleResource.PredicateProperty.DataId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-dataid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: negated

         ``RuleResource.PredicateProperty.Negated``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-negated


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``RuleResource.PredicateProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



RuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RuleResourceProps



   .. py:attribute:: metricName

      ``AWS::WAF::Rule.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ruleName

      ``AWS::WAF::Rule.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: predicates

      ``AWS::WAF::Rule.Predicates``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-predicates


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.RuleResource.PredicateProperty` or undefined


SizeConstraintSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SizeConstraintSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SizeConstraintSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty



      .. py:attribute:: data

         ``SizeConstraintSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SizeConstraintSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SizeConstraintProperty



      .. py:attribute:: comparisonOperator

         ``SizeConstraintSetResource.SizeConstraintProperty.ComparisonOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-comparisonoperator


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: fieldToMatch

         ``SizeConstraintSetResource.SizeConstraintProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResource.FieldToMatchProperty`


      .. py:attribute:: size

         ``SizeConstraintSetResource.SizeConstraintProperty.Size``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-size


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: textTransformation

         ``SizeConstraintSetResource.SizeConstraintProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SizeConstraintSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResourceProps



   .. py:attribute:: sizeConstraintSetName

      ``AWS::WAF::SizeConstraintSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sizeconstraintset.html#cfn-waf-sizeconstraintset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sizeConstraints

      ``AWS::WAF::SizeConstraintSet.SizeConstraints``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sizeconstraintset.html#cfn-waf-sizeconstraintset-sizeconstraints


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResource.SizeConstraintProperty`


SqlInjectionMatchSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SqlInjectionMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SqlInjectionMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty



      .. py:attribute:: data

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SqlInjectionMatchTupleProperty



      .. py:attribute:: fieldToMatch

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sqlinjectionmatchset-sqlinjectionmatchtuples.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sqlinjectionmatchset-sqlinjectionmatchtuples.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SqlInjectionMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResourceProps



   .. py:attribute:: sqlInjectionMatchSetName

      ``AWS::WAF::SqlInjectionMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sqlinjectionmatchset.html#cfn-waf-sqlinjectionmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sqlInjectionMatchTuples

      ``AWS::WAF::SqlInjectionMatchSet.SqlInjectionMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sqlinjectionmatchset.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty` or undefined


WebACLResource
~~~~~~~~~~~~~~

.. py:class:: WebACLResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WebACLResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WebACLResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ActivatedRuleProperty



      .. py:attribute:: action

         ``WebACLResource.ActivatedRuleProperty.Action``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-action


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.WafActionProperty`


      .. py:attribute:: priority

         ``WebACLResource.ActivatedRuleProperty.Priority``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-priority


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: ruleId

         ``WebACLResource.ActivatedRuleProperty.RuleId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-ruleid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: WafActionProperty



      .. py:attribute:: type

         ``WebACLResource.WafActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-action.html#cfn-waf-webacl-action-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



WebACLResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebACLResourceProps



   .. py:attribute:: defaultAction

      ``AWS::WAF::WebACL.DefaultAction``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-defaultaction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.WafActionProperty`


   .. py:attribute:: metricName

      ``AWS::WAF::WebACL.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: webAclName

      ``AWS::WAF::WebACL.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rules

      ``AWS::WAF::WebACL.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-rules


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.ActivatedRuleProperty` or undefined


XssMatchSetResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``XssMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``XssMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty



      .. py:attribute:: data

         ``XssMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple-fieldtomatch.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``XssMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple-fieldtomatch.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: XssMatchTupleProperty



      .. py:attribute:: fieldToMatch

         ``XssMatchSetResource.XssMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``XssMatchSetResource.XssMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple.html#cfn-waf-xssmatchset-xssmatchtuple-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



XssMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResourceProps



   .. py:attribute:: xssMatchSetName

      ``AWS::WAF::XssMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-xssmatchset.html#cfn-waf-xssmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: xssMatchTuples

      ``AWS::WAF::XssMatchSet.XssMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-xssmatchset.html#cfn-waf-xssmatchset-xssmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResource.XssMatchTupleProperty`



.. py:currentmodule:: @aws-cdk/aws-waf

